package com.lado.app.Model.Tamagotchi;

public class Sheep extends Tamagotchi {

  public Sheep(String name) {
    super(name);
    this.breed = "Sheep";
    this.favoriteFoods[0] = "grass";
    
  }
  //  public Sheep() {
  //    this.setBreed("sheep");
  //    this.favoriteFood = "grass";
  //  }
}
