package com.lado.app.SystemPackage;

public class gameLoader extends System {}
